# Airbnb-Florence

./: .gitignore  README.md  pyproject.toml
data/processed/: florence_processed.csv  listings_processed.parquet
data/raw/: listings.csv
notebooks/: 01_preprocessing.ipynb  02_analysis.ipynb  02_exploration.ipynb  03_analysis.ipynb
